--- a/clusters/my-cluster/nginx-helmrelease.yaml
+++ b/clusters/my-cluster/nginx-helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: nginx
-      version: "17.0.0"
+      version: "21.x.x"
       sourceRef:
         kind: HelmRepository
         name: bitnami
