--- a/clusters/my-cluster/nginx-helmrelease.yaml
+++ b/clusters/my-cluster/nginx-helmrelease.yaml
@@ -8,10 +8,10 @@ spec:
   chart:
     spec:
       chart: nginx
-      version: "21.1.23"
+      version: "15.14.0"
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: bitnmami
         namespace: flux-system
   values:
     service:
