--- a/clusters/my-cluster/nginx-helmrelease.yaml
+++ b/clusters/my-cluster/nginx-helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
       version: "15.14.0"
       sourceRef:
         kind: HelmRepository
-        name: bitnmami
+        name: bitnami
         namespace: flux-system
   values:
     service:
