--- a/clusters/my-cluster/nginx-helmrelease.yaml
+++ b/clusters/my-cluster/nginx-helmrelease.yaml
@@ -7,11 +7,11 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: nginx
-      version: "15.14.0"
+      chart: podinfo
+      version: "6.5.3"
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: podinfo
         namespace: flux-system
   values:
     service:
