--- a/clusters/my-cluster/nginx-helmrepository.yaml
+++ b/clusters/my-cluster/nginx-helmrepository.yaml
@@ -1,9 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: bitnami
+  name: podinfo
   namespace: flux-system
 spec:
-  type: oci
   interval: 1m
-  url: oci://registry-1.docker.io/bitnamicharts
+  url: https://stefanprodan.github.io/podinfo
