--- a/clusters/my-cluster/nginx-helmrelease.yaml
+++ b/clusters/my-cluster/nginx-helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nginx
+  name: podinfo
   namespace: default
 spec:
   interval: 1m
